--- a/docs/src/components/Footer.astro
+++ b/docs/src/components/Footer.astro
@@ -1,11 +1,11 @@
 ---
 // Copied from '@astrojs/starlight/components/Footer.astro';
+// @ts-nocheck needed because :shrug:
 
 import LastUpdated from '@astrojs/starlight/components/LastUpdated.astro';
 import EditLink from '@astrojs/starlight/components/EditLink.astro';
 import Pagination from '@astrojs/starlight/components/Pagination.astro';
 ---
-
 
 <footer class="sl-flex">
     <div class="meta sl-flex">
@@ -21,6 +21,7 @@ import Pagination from '@astrojs/starlight/components/Pagination.astro';
 
 <style>
     .made-with {
+        margin-top: 2rem;
         display: flex;
         justify-content: center;
     }
@@ -55,4 +56,3 @@ import Pagination from '@astrojs/starlight/components/Pagination.astro';
         color: var(--sl-color-white);
     }
 </style>
-
