--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -1,7 +1,5 @@
 
-/*!* Keep Mermaid line height *!*/
-svg[id^="mermaid"] {
-    line-height: normal !important;
-    background-color: #f0f0f0;
-    padding: 5px;
+/* https://github.com/withastro/starlight/issues/1321#issuecomment-2504085488 */
+th, td {
+    min-width: 100px;
 }
